--- a/css/main.css
+++ b/css/main.css
@@ -83,15 +83,21 @@ main {
 }
 
 .start {
+    margin: 0 auto;
     display: block;
     border: none;
     background: #fff;
     padding: 10px;
+    width: 150px;
+    border-radius: 3px;
+    text-transform: uppercase;
+    font-weight: bold;
+    box-shadow: 0 0 1px 1px rgba(0,0,0, 0.5);
 }
 
 .start:hover {
     cursor: pointer;
-    background: red;
+    background-color: #D1CFD0;
 }
 
 #tetris-field {
@@ -125,14 +131,16 @@ main {
     background-color: orange;
 }
 
-
 .score-field {
     margin-top: 20px;
+    margin-bottom: 20px;
+    font-weight: bold;
 }
 
 .rules {
-    margin-top: 20px;
     cursor: default;
+    list-style: none;
+    padding: 0;
 }
 
 .score-field {
@@ -141,4 +149,63 @@ main {
 
 button.hidden {
     display: none;
+}
+
+.start-block {
+    height: 60px;
+    margin-top: 25px;
+}
+
+h2 {
+    cursor: default;
+}
+
+form input.start {
+    display: block;
+    margin: 10px auto;
+}
+
+form input[type=text] {
+    display: block;
+    padding: 10px 10px;
+    width: 150px;
+    margin: 10px auto;
+    border: none;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+}
+
+form input[type=text]:focus, form input[type=text]:active {
+    outline: none;
+    border: none;
+}
+
+form p {
+    font-size: 20px;
+    font-weight: bold;
+    cursor: default;
+}
+
+.header-description {
+    display: none;
+    font-size: 25px;
+    background: rgba(0, 0, 0, 0.3);
+    color: black;
+    box-shadow: 0 0 3px 3px rgba(1,1,1,0.3);
+    padding: 10px 0;
+    margin-top: 20px;
+    cursor: default;
+}
+
+@media screen and (max-width: 790px) {
+    main {
+        display: none;
+    }
+    .header-description {
+        display: block;
+    }
 }
